<resources>
    <string name="app_name">Nkolo</string>
    <string name="signup_page">Create new nkolo account</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_my_account">create my account</string>
    <string name="login_page">This is nkolo</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signin">Sign in</string>
    <string name="app_slogan">payments for everyday people</string>
    <string name="welcome_text">The all in one wallet for everyday people. Free, Fast and Secure transfers to everyone you interract with daily.</string>
    <string name="fpassword_page">Recover Password</string>
    <string name="forgot_password_prompt">we will send a recovery code to this e-mail</string>
    <string name="get_code">Get Code</string>
    <string name="codevalidation_page">Enter OTP sent to you.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_scan">Scan</string>
    <string name="title_more">More</string>
</resources>