<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".credentials.ForgotPasswordFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bg"
        android:paddingTop="@dimen/padding_double"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="@dimen/padding_double"
            >
            <ImageButton
                android:id="@+id/backbutton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/xd_backbutton"
                android:background="@android:color/transparent"
                />
        </androidx.appcompat.widget.Toolbar>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_double"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fpassword_page"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_triple"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_backgrounds"
            android:padding="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text|textEmailAddress"
                android:hint="example@gmail.com"
                android:background="@android:color/transparent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_single"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_prompt"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:paddingTop="@dimen/padding_single"
            android:paddingBottom="@dimen/padding_single"/>

        <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            android:background="@drawable/button_primary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/padding_double"
            />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>