<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".credentials.Landing"
    android:orientation="vertical"
    android:gravity="center" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".9"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/nkolo_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_large"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="@dimen/text_paragraph"
        android:textColor="@color/black"
        />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight=".8"
        android:orientation="vertical"
        android:background="@drawable/bottom_bg"
        android:padding="@dimen/padding_double"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is us."
            android:textSize="@dimen/text_medium"
            android:textColor="@color/off_white"
            android:layout_marginTop="@dimen/padding_double"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="@color/off_white"
            android:layout_marginTop="@dimen/padding_single"
            android:layout_marginLeft="4dp"
            android:textSize="@dimen/text_paragraph"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_double"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/button_signin"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:elevation="5dp"
                android:background="@drawable/button_primary_dark"
                android:text="Sign In"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/off_white"
                android:background="@drawable/black_buttons"
                android:text="Sign Up"
                android:layout_margin="4dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>